revisi kondisi data gagal diproses

--- a/table-with-callback/index.html
+++ b/table-with-callback/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h5 class="container p-3">Table with Callback</h5>
-    <h1 class="text-center">LIST OF USER</h1>
+    <h1 class="text-center"><b>LIST OF USER</b></h1>
     <div id="app"></div>
     <div id="tes"></div>
 </div>
